--- a/index.css
+++ b/index.css
@@ -8,17 +8,23 @@ body{
     flex-direction: column;
     margin: 0;
 }
-*{
+*{/*FOR ALIGNING AND TROUBLESHOOTING*/
     border: 1px solid black;
+}
+
+a{
+    text-decoration: none;
 }
 
 .header{
     display: flex;
     /* flex-grow: 1; */
     background-color: aqua;
-    flex-basis: 60px;
+    max-height: 50px;
     align-items: center;
+    padding: 0 10px;
 }
+
 
 .logo{
     display: flex;
@@ -28,11 +34,13 @@ body{
 .head-right-links{
     display: flex;
     flex-grow: 1;
+    justify-content: flex-end;
 }
 
 ul{
     display: flex;
     gap: 24px;
+    list-style: none;
 
 }
 
@@ -40,6 +48,27 @@ ul{
     display: flex;
     flex-grow: 1;
     flex-basis: 400px;
+    background-color: teal;
+}
+
+.head-blurb{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-grow: 1;
+    flex-basis: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.content{
+    font-size: 24px;
+}
+
+.head-img{
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
 }
 
 .info-box{
@@ -63,5 +92,8 @@ ul{
 .footer{
     display: flex;
     flex-grow: 1;
-    flex-basis: 60px;
+    flex-basis: 50px;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
 }
