--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body{
     margin: 0;
 }
 *{/*FOR ALIGNING AND TROUBLESHOOTING*/
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 a{
@@ -19,7 +19,7 @@ a{
 .header{
     display: flex;
     /* flex-grow: 1; */
-    background-color: aqua;
+    background-color: forestgreen;
     max-height: 50px;
     align-items: center;
     padding: 0 10px;
@@ -28,18 +28,18 @@ a{
 
 .logo{
     display: flex;
-    flex-grow: 3;
+    flex-grow: 1;
 }
 
 .head-right-links{
     display: flex;
     flex-grow: 1;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 ul{
     display: flex;
-    gap: 24px;
+    gap: 36px;
     list-style: none;
 
 }
@@ -48,7 +48,7 @@ ul{
     display: flex;
     flex-grow: 1;
     flex-basis: 400px;
-    background-color: teal;
+    background-color: forestgreen;
 }
 
 .head-blurb{
@@ -75,6 +75,43 @@ ul{
     display: flex;
     flex-grow: 1;
     flex-basis: 400px;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgreen;
+}
+
+.info-box-head{
+    display: flex;
+    flex-grow: 1;
+    max-height: 100px;
+    font-size: 24px;
+    width: auto;
+}
+
+.info-box-content{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    padding: 0 200px;
+    flex-grow: 4;
+    
+}
+
+.fun-fact{
+    display: flex;
+    flex-direction: column;
+}
+
+.fact-img{
+    display: flex;
+    height: 200px;
+    flex-grow: 1;
+}
+
+.fact-content{
+    display: flex;
+    font-size: 18px;
+    text-align: center;
 }
 
 .quote-box{
